# artifacts-crate

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: artifact_tests.rs
