[package]
name = "artifacts-crate"
version = "0.1.0"
edition = "2021"
authors = ["<unaribur@gmail.com>, GPT-4"]
description = "A crate for managing shared read/write access to data stored in a JSON file."
repository = "https://github.com/abgita/artifacts-crate"
license = "MIT"

[dependencies]
tokio = { version = "1.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
once_cell = "1.8.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.14", features = ["full", "test-util"] }
futures = "0.3"
